일별 전력 사용량 샘플 그래프
일별 전기 사용량 탭에 일별 전기 사용량 샘플 그래프를 추가 함.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,10 +48,12 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <TextView
+                    <com.github.mikephil.charting.charts.HorizontalBarChart
+                        android:id="@+id/chart2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="두번째 화면" />
+                        android:background="@android:color/white" />
+
 
                 </LinearLayout>
 
